<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.capstone.pedotan.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_market"
        android:name="com.capstone.pedotan.ui.market.MarketFragment"
        android:label="@string/title_market"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/navigation_contract"
        android:name="com.capstone.pedotan.ui.contract.ContractFragment"
        android:label="@string/title_contract"
        tools:layout="@layout/fragment_contract" />

    <fragment
        android:id="@+id/navigation_loan"
        android:name="com.capstone.pedotan.ui.loan.LoanFragment"
        android:label="@string/title_loan"
        tools:layout="@layout/fragment_loan" />

</navigation>