<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="350dp"
    android:layout_marginEnd="16dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:id="@+id/linearLayout_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_roundedcorner_settings"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_field">

            <TextView
                android:id="@+id/field_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/field_luas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/field_luas"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/field_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/field_location"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_field">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/field_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/field_condition"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cek_riwayat"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_roundedcorner"
            android:text="@string/cek_field"
            android:textSize="14sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cek_kondisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/background_roundedcorner"
                android:text="@string/cek_field_condition"
                android:textSize="14sp"
                app:backgroundTint="?attr/colorSecondary"
                app:layout_constraintEnd_toStartOf="@+id/btn_cek_penyakit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cek_penyakit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/background_roundedcorner"
                android:text="@string/cek_penyakit"
                android:textSize="14sp"
                app:backgroundTint="?attr/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_cek_kondisi"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>