<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.market.MarketFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_find_investor"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/green_300"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/have_not_complete_personal_data"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_update_personal_data"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/green_300"
        app:backgroundTint="@color/green_100"
        android:background="@drawable/background_roundedcorner_settings"
        android:textAlignment="center"
        android:onClick="updatePersonalData"
        />

</LinearLayout>
